# Andoid-Build-Tool-make-native-activity-application-without-Gradle

./: CMakeLists.txt  LICENSE  NOTICE  README.md  build.sh
abt-tests/01-simple-native/: AbtProject.cmake  AndroidManifest.xml
abt-tests/01-simple-native/include/: Config.h  EventQueue.h  InputHandler.h  LifecycleManager.h  Logger.h  StateManager.h  Timer.h  Types.h
abt-tests/01-simple-native/res/values/: strings.xml
abt-tests/01-simple-native/src/: Config.cpp  EventQueue.cpp  InputHandler.cpp  LifecycleManager.cpp  Logger.cpp  StateManager.cpp  Timer.cpp  main.cpp
abt-tests/02-gl-triangle/: AbtProject.cmake  AndroidManifest.xml
abt-tests/02-gl-triangle/include/: Camera.h  EGLHelper.h  GLTypes.h  MathUtils.h  Mesh.h  Renderer.h  ShaderCompiler.h  ShaderProgram.h  Texture.h  VertexBuffer.h
abt-tests/02-gl-triangle/res/values/: strings.xml
abt-tests/02-gl-triangle/src/: Camera.cpp  EGLHelper.cpp  MathUtils.cpp  Mesh.cpp  Renderer.cpp  ShaderCompiler.cpp  ShaderProgram.cpp  Texture.cpp  VertexBuffer.cpp  main.cpp
abt-tests/03-audio-sink/: AbtProject.cmake  AndroidManifest.xml
abt-tests/03-audio-sink/include/: AudioEngine.h  AudioTypes.h  Compressor.h  Effects.h  LowPassFilter.h  Mixer.h  Oscillator.h  RingBuffer.h  WaveWriter.h
abt-tests/03-audio-sink/res/values/: strings.xml
abt-tests/03-audio-sink/src/: AudioEngine.cpp  Compressor.cpp  Effects.cpp  LowPassFilter.cpp  Mixer.cpp  Oscillator.cpp  RingBuffer.cpp  WaveWriter.cpp  main.cpp
include/abt/common/: Logger.h  Types.h
include/abt/engine/: BuildGraph.h  ConfigParser.h  IWatcher.h  ProcessPool.h  TaskScheduler.h  xxHasher.h
include/abt/toolchain/: DepManager.h  NDKBridge.h
runtime/tiny_dex/: classes.dex  generate_tiny_dex.py
sdk/: AbtProject.cmake  ToolchainAndroid.cmake
src/: main.cpp
src/depman/resolver/: Resolver.cpp
src/engine/config/: ConfigParser.cpp
src/engine/core/: BuildGraph.cpp  TaskScheduler.cpp
src/engine/fs/: Watcher_inotify.cpp  xxHasher.cpp
src/engine/process/: ProcessPool.cpp  SignalHandler.cpp
src/toolchain/ndk/: NDKBridge.cpp
src/toolchain/sdk/: SDKBridge.cpp
